testsuite/tests/indexed-types/should_fail/T13102/all.T
# Test that we don't use a family instance that we didn't import

test('T13102', [expect_broken(13102),
     extra_files(['A.hs', 'B.hs', 'orphan'])],
     makefile_test, ['T13102'])
